--- a/style.css
+++ b/style.css
@@ -268,4 +268,6 @@ body {
 .images {
   margin-top: 1rem;
   display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
 }
